fixing alignment of journeys-div

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ html, body {
   position: sticky;
   top: 0;
   left: 0;
-  z-index: 1000;
+  z-index: 200000;
   backdrop-filter: blur(5.6px);
   -webkit-backdrop-filter: blur(3px);
   padding: 50px 6rem; /* Combine padding */
